--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "mathjs": "^5.2.0",
     "vue": "^2.5.17",
+    "vuetify": "^1.2.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-unit-jest": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
