--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mathjs": "^5.2.0",
     "vue": "^2.5.17",
     "vuetify": "^1.2.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "merge": ">=1.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-unit-jest": "^3.0.1",
