--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
     "snapshotSerializers": [
       "jest-serializer-vue"
     ],
-    "testMatch": [
-      "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
-    ],
+    "testMatch": [],
     "testURL": "http://localhost/"
   }
 }
